--- a/exercicioEbac.html
+++ b/exercicioEbac.html
@@ -10,15 +10,15 @@
         <h1>Formulário de cadastro</h1>
     </header>
     <main>
-        <from>
-            <label for="nome">Nome </label><input id="nome" type="user"/>
+        <form>
+            <label for="nome">Nome </label><input id="nome" type="text"/>
             <br>
             <label for="email">E-mail </label><input id="email" type="email"/>
             <br>
             <label for="senha">Senha </label><input id="senha" type="password"/>
             <br>
             <button type="submit">Cadastrar</button>
-        </from>
+        </form>
     </main>
 </body>
 </html>
